# splunk-regex-challenges

./: .gitignore  README.md  SECURITY.MD  pyproject.toml  regex_challenge.py  requirements.txt  test_nothing.py
.github/workflows/: app_testing.yml  testing.yml
challenges/: 2021-10-12-pre-conf.json  2022-01-07-hello-world.json
