[tool.poetry]
name = "splunk-regex-challenges"
version = "0.0.2"
description = "A framework for splunk regex challenges"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.7.0"
click = "^8.1.3"
pydantic = "^1.10.7"

[tool.poetry.dev-dependencies]
pylint = "^2.17.2"
pytest = "^7.3.1"
black = "^23.3.0"
mypy = "^1.2"
pylint-pydantic = "^0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
max-line-length=200
max-locals=20
disable="W0511"

# https://github.com/samuelcolvin/pydantic/issues/1961#issuecomment-759522422
extension-pkg-whitelist="pydantic"
load-plugins="pylint_pydantic"
